@@ -17,39 +17,33 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.math.BigDecimal;
-import java.sql.Timestamp;
-import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.lang.Short;
 
-import org.junit.jupiter.api.AfterEach;
+
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.dao.DuplicateKeyException;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.example.domains.contracts.services.FilmService;
-import com.example.domains.entities.Category;
 import com.example.domains.entities.Film;
-import com.example.domains.entities.Language;
 import com.example.domains.entities.Film.Rating;
-import com.example.domains.entities.dtos.CategoryDTO;
-import com.example.domains.entities.dtos.ElementoDTO;
+import com.example.domains.entities.Language;
 import com.example.domains.entities.dtos.FilmDTO;
 import com.example.domains.entities.dtos.FilmEditDTO;
 import com.example.domains.entities.dtos.FilmShortDTO;
 import com.example.exceptions.InvalidDataException;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 @WebMvcTest(FilmResource.class)
@@ -142,20 +136,10 @@ class FilmResourceTest {
 		
 		@Test
 		void testCrearFilmOK() throws Exception {
-			var pelicula = new Film();
-			pelicula.setFilmId(1);
-			pelicula.setDescription("Descripcion prueba");
-			pelicula.setLength(180);
-			pelicula.setRating(Rating.PARENTS_STRONGLY_CAUTIONED);
-			pelicula.setReleaseYear(Short.valueOf("2002"));
-			pelicula.setRentalDuration(Byte.valueOf("3"));
-			pelicula.setRentalRate(BigDecimal.valueOf(5.23));
-			pelicula.setReplacementCost(BigDecimal.valueOf(15.99));
-			pelicula.setTitle("Prueba pelicula");
-			pelicula.setLanguage(null);
-			pelicula.setLanguageVO(null);
-			pelicula.setActors(List.of());
-			pelicula.setCategories(List.of());
+			var pelicula = new Film(1,"Prueba de pelicula", "Descripción pelicula", new Short("2002"), 
+					new Language(4), new Language(3), (byte) 5, new BigDecimal(5.8), 160, 
+					new BigDecimal(30), Rating.GENERAL_AUDIENCES);
+			
 			
 			when(srv.añadir(pelicula)).thenReturn(pelicula);
 			mockMvc.perform(post("/api/peliculas/v1")
@@ -165,6 +149,73 @@ class FilmResourceTest {
 					.andExpect(status().isCreated())
 			        .andExpect(header().string("Location", "http://localhost/api/peliculas/v1/1"))
 			       .andDo(print());
+		}
+		
+		@Test
+		void testCrearFilmKO() throws JsonProcessingException, Exception {
+			var pelicula = new Film(256,"Prueba de pelicula errónea", "Descripción pelicula", new Short("2002"), 
+					new Language(4), new Language(3), (byte) 5, new BigDecimal(5.8), 160, 
+					new BigDecimal(30), Rating.GENERAL_AUDIENCES);
+			
+			when(srv.añadir(pelicula)).thenThrow(new InvalidDataException());
+			mockMvc.perform(post("/api/peliculas/v1")
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(FilmEditDTO.from(pelicula))))
+				.andExpect(status().isBadRequest())
+				.andExpect(jsonPath("$.title").value("Bad Request"))
+		        .andDo(print());
+		}
+		
+	}
+	
+	@Nested
+	class TestModificarNested{
+		
+		@Test
+		void testModificarFilmOK() throws JsonProcessingException, Exception {
+			var pelicula = new Film(1,"Prueba de pelicula", "Descripción pelicula", new Short("2002"), 
+					new Language(4), new Language(3), (byte) 5, new BigDecimal(5.8), 160, 
+					new BigDecimal(30), Rating.GENERAL_AUDIENCES);
+			
+			when(srv.modificar(pelicula)).thenReturn(pelicula);
+			mockMvc.perform(put("/api/peliculas/v1/{id}", pelicula.getFilmId())
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(FilmEditDTO.from(pelicula))))
+				.andExpect(status().isNoContent())
+				.andExpect(status().is2xxSuccessful())
+		        .andDo(print());
+		}
+		
+		@Test
+		void testModificarFilmKO() throws JsonProcessingException, Exception {
+			var pelicula = new Film(1,"Prueba de pelicula", "Descripción pelicula", new Short("2002"), 
+					new Language(4), new Language(3), (byte) 5, new BigDecimal(5.8), 160, 
+					new BigDecimal(30), Rating.GENERAL_AUDIENCES);
+			
+			when(srv.modificar(pelicula)).thenThrow(new InvalidDataException());
+			mockMvc.perform(put("/api/peliculas/v1/{id}", pelicula.getFilmId())
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(FilmDTO.from(pelicula))))
+				.andExpect(status().isBadRequest())
+				.andExpect(jsonPath("$.title").value("Datos invalidos"))
+		        .andDo(print());
+		}
+	}
+	
+	@Nested
+	class TestBorrarNested{
+		
+		@Test
+		void testBorrarFilmOK() throws Exception {
+			var id = 1;
+			
+			doNothing().when(srv).deleteById(id);
+			
+			mockMvc.perform(delete("/api/peliculas/v1/{id}", id))
+				.andExpect(status().isNoContent())
+		        .andDo(print());
+			
+			verify(srv,times(1)).deleteById(id);
 		}
 	}
 
